apps/bookinfo/overlays/istio129-mc/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    istio.io/dataplane-mode: ambient
    istio-discovery: enabled
    openshift.io/user-monitoring: "true"
