apps/bookinfo/overlays/istio129-mc/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookinfo
  namespace: bookinfo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bookinfo-gateway
  rules:
    - matches:
        - path: { type: PathPrefix, value: /productpage }
        - path: { type: PathPrefix, value: /static }
        - path: { type: PathPrefix, value: /login }
        - path: { type: PathPrefix, value: /logout }
        - path: { type: PathPrefix, value: /api/v1/products }
      backendRefs:
        - group: ""
          kind: Service
          name: productpage
          port: 9080
          weight: 1
    - matches:
        - path: { type: PathPrefix, value: /details }
      backendRefs:
        - group: ""
          kind: Service
          name: details
          port: 9080
          weight: 1
    - matches:
        - path: { type: PathPrefix, value: /reviews }
      backendRefs:
        - group: ""
          kind: Service
          name: reviews
          port: 9080
          weight: 1
    - matches:
        - path: { type: PathPrefix, value: /ratings }
      backendRefs:
        - group: ""
          kind: Service
          name: ratings
          port: 9080
          weight: 1
